examples/apps/wordpress/wordpress.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - name: wordpress
          image: wpeverywhere/frankenwp:latest-php8.3
          volumeMounts:
            - name: wordpress-content
              mountPath: /var/www/html/wp-content
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
  volumeClaimTemplates:
    - metadata:
        name: wordpress-content
        labels:
          app.kubernetes.io/name: wordpress
          recurring-job-group.longhorn.io/auto-backup: enabled
          recurring-job-group.longhorn.io/auto-snapshot: enabled
          backup-frequency: low
          snapshot-frequency: high
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: longhorn
        resources:
          requests:
            storage: 5Gi
        volumeMode: Filesystem
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: wordpress
