examples/apps/wordpress/cloudflared.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-cloudflared
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: wordpress.btrcloud.com
      http:
        paths:
          - backend:
              service:
                name: wordpress
                port:
                  number: 80
            path: /
            pathType: Prefix
