examples/apps/wordpress/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wordpress-https
spec:
  hostnames:
    - wordpress.menia.cc
  parentRefs:
    - name: shared-gateway
      namespace: default
      sectionName: shared-https
  rules:
    - backendRefs:
        - name: wordpress
          port: 80
